# stain

./: .gitignore  CLAUDE.md  README.md  devlog.yaml  pyproject.toml  stain.config.yaml
agents/discovery/: prompt.md
agents/research_extract/: prompt.md
benchmarks/: anthropic_haiku.yaml  cerebras_llama8b.yaml  cerebras_qwen235b.yaml  groq_llama70b.yaml  groq_llama8b.yaml
corpus/: corpus.yaml
corpus/ambiguous/: human_blog_01.txt  human_blog_02.txt  human_blog_05.txt  human_blog_08.txt  human_essay_03.txt  human_essay_06.txt  human_essay_10.txt  human_linkedin_04.txt  human_linkedin_09.txt  human_review_07.txt
corpus/bulk/: manifest.yaml
corpus/gold/: manifest.yaml
corpus/gold/known_human/: human_godin_organizedbravery_2012.txt  human_jclear_marginalgains_2015.txt  human_pg_tasteformakers_2002.txt  human_sivers_contribution_2018.txt  human_sivers_obvious_2010.txt
corpus/gold/known_llm/: llm_blog_03.txt  llm_linkedin_01.txt  llm_linkedin_02.txt  llm_linkedin_05.txt  llm_linkedin_08.txt  llm_marketing_04.txt  llm_marketing_09.txt
corpus/known_human/: human_craigmod_margins_2012.txt  human_pg_dontscale_2013.txt  human_pg_meanpeoplefail_2014.txt  human_sivers_expire_2016.txt  human_sivers_firstfollower_2010.txt  human_sivers_hellyeah_2009.txt  human_sivers_localorglobal_2018.txt  human_sivers_nospeedlimit_2009.txt
corpus/known_llm/: llm_blog_06.txt  llm_thought_07.txt  llm_thought_10.txt
detectors/D1_rhetorical_pattern/: CHANGELOG.md  detector.yaml  prompt.md
detectors/D1_rhetorical_pattern/versions/: v0.1.0.md
detectors/D2_sentence_rhythm/: CHANGELOG.md  detector.yaml  prompt.md
detectors/D2_sentence_rhythm/versions/: v0.1.0.md
detectors/D3_lexical_diversity/: CHANGELOG.md  detector.yaml  prompt.md
detectors/D3_lexical_diversity/versions/: v0.1.0.md
detectors/D4_hedging_density/: CHANGELOG.md  detector.yaml  prompt.md
detectors/D4_hedging_density/versions/: v0.1.0.md
detectors/D5_structural_predictability/: CHANGELOG.md  detector.yaml  prompt.md
detectors/D5_structural_predictability/versions/: v0.1.0.md
detectors/D6_semantic_emptiness/: CHANGELOG.md  detector.yaml  prompt.md
detectors/D6_semantic_emptiness/versions/: v0.1.0.md
docs/: detectors.md  extending.md  methodology.md
docs/superpowers/plans/: 2026-04-09-ring1-detection-engine.md
docs/superpowers/specs/: 2026-04-09-stain-roadmap-design.md
research/: config.yaml
src/stain/: __init__.py  audit.py  benchmark.py  cli.py  config.py  corpus.py  detector.py  discovery.py  generate.py  html.py  input.py  mcp_server.py  models.py  orchestrator.py  output.py  registry.py  research.py
tests/: test_audit.py  test_cli_integration.py  test_config.py  test_corpus.py  test_detector.py  test_discovery.py  test_generate.py  test_html.py  test_input.py  test_mcp.py  test_models.py  test_orchestrator.py  test_output.py  test_registry.py  test_research.py
