[project]
name = "stain-cli"
version = "0.1.0"
description = "Multi-agent text analysis pipeline that surfaces LLM generation patterns"
authors = [{ name = "Kai Hallett", email = "kai@oceanheart.ai" }]
readme = {text = "Multi-agent text analysis pipeline that surfaces LLM generation patterns", content-type = "text/plain"}
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.40.0,<2",
    "click>=8.1.0,<9",
    "pyyaml>=6.0,<7",
    "pydantic>=2.0,<3",
    "rich>=13.0,<15",
    "python-dotenv>=1.2.2,<2",
    "trafilatura>=2.0,<3",
    "httpx>=0.27,<1",
]

[project.scripts]
stain = "stain.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stain"]

[tool.hatch.build.targets.wheel.force-include]
"detectors" = "stain/data/detectors"
"agents" = "stain/data/agents"

[project.urls]
Homepage = "https://github.com/rickhallett/stain"
Repository = "https://github.com/rickhallett/stain"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
mcp = [
    "mcp>=1.0,<2",
]
notebook = [
    "jupyter>=1.0",
    "matplotlib>=3.8",
    "pandas>=2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
